Site: Fix tiny font size on iOS
Also removed rule targeting IE on Windows Phone.

--- a/site/static/global.css
+++ b/site/static/global.css
@@ -113,8 +113,7 @@ body {
 /*	base reset ----------------------------- */
 html {
 	font-size: 62.5%;
-	-ms-text-size-adjust: 62.5%;
-	-webkit-text-size-adjust: 62.5%;
+	-webkit-text-size-adjust: 100%;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
 	box-sizing: border-box;
 	border-collapse: collapse;
